--- a/inria/Code/NER_flair.ipynb
+++ b/inria/Code/NER_flair.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {
     "id": "sKPy_1S8e8gY"
    },
@@ -12,14 +12,65 @@
     "import pandas as pd\n",
     "from io import StringIO\n",
     "import json\n",
-    "from matplotlib import pyplot\n",
     "import unicodedata\n",
-    "%matplotlib inline"
+    "import numpy as np\n",
+    "import nltk\n",
+    "import predict_flair\n",
+    "from flair.models import SequenceTagger\n",
+    "import fr_core_news_lg as fr\n",
+    "from python_heideltime import Heideltime\n",
+    "import ipinfo\n",
+    "import urllib.request\n",
+    "from ip2geotools.databases.noncommercial import DbIpCity\n",
+    "import re\n",
+    "import spacy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# communes = pd.read_csv(\"Data/scrapped/g3.csv\", header=None).to_numpy().reshape(-1)\n",
+    "# res = []\n",
+    "# for comm in communes:\n",
+    "#     comm_=re.sub(\"['-]\", \" \",comm)\n",
+    "#     res.append(unicodedata.normalize('NFD', comm_.lower()).encode('ascii', 'ignore').decode(\"utf-8\"))\n",
+    "# pd.DataFrame(res).to_csv(\"Data/scrapped/g3_.csv\", index=None, header=None)\n",
+    "\n",
+    "#Computing the embedings for the communes\n",
+    "# vectors = {}\n",
+    "# for comm in communes:\n",
+    "#     words = comm.split(\" \")\n",
+    "#     vect = np.zeros(300)\n",
+    "#     for word in words:\n",
+    "#         emb = ft.get_word_vector(word)\n",
+    "#         vect = vect + emb\n",
+    "#     print(vect)\n",
+    "#     vect = vect/len(words)\n",
+    "#     vectors[comm] = vect "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_bss(query): \n",
+    "    # AAAABCDDDD/designation\n",
+    "    regex = \"[0-9]{5}[a-zA-Z][0-9]{4}/[a-zA-Z0-9]+\"\n",
+    "    match = re.findall(regex, query)\n",
+    "    return match\n",
+    "    if match :\n",
+    "        return re.group(0)\n",
+    "    return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "id": "48caB86KjBOT"
    },
@@ -35,7 +86,9 @@
     "              .format(c=commune_)\n",
     "    exists = len(json.loads(requests.get(url).text))\n",
     "    if exists>0 :\n",
-    "        return json.loads(requests.get(url).text)[0][\"code\"]\n",
+    "        codes = json.loads(requests.get(url).text)\n",
+    "        return [code[\"code\"] for code in codes \\\n",
+    "                if  unicodedata.normalize('NFD', code[\"nom\"].lower()).encode('ascii', 'ignore').decode(\"utf-8\") == commune_]\n",
     "    else:\n",
     "        print(\"Commune does not exist\")\n",
     "        return -1"
@@ -43,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "AnJCYr5jmKQT"
    },
    "outputs": [],
    "source": [
-    "def get_bss(code_commune):\n",
+    "def insee_to_bss(code_commune):\n",
     "    url =  \"https://hubeau.eaufrance.fr/api/v1/niveaux_nappes/stations?code_commune={c}&format=json&size=20\".format(c=code_commune)\n",
     "    exists = json.loads(requests.get(url).text)[\"count\"]\n",
     "    if exists>0 :\n",
@@ -64,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "KVD99fybFgzV"
    },
@@ -80,7 +133,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {
+    "id": "C9qGKKe2RWT-"
+   },
+   "outputs": [],
+   "source": [
+    "def get_locations(query):\n",
+    "    \n",
+    "    batch_size = 4\n",
+    "    MODEL_PATH = \"/home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\"\n",
+    "    tag_type = \"label\"\n",
+    "    model = SequenceTagger.load(MODEL_PATH)\n",
+    "    \n",
+    "    snippets = [[1, query]]\n",
+    "    result = predict_flair.get_entities(snippets, model, tag_type, batch_size)[\"snippets\"][0][1]\n",
+    "    locations = [entity[\"text\"] for entity in result[\"entities\"] if entity[\"type\"] == \"LOC\"]\n",
+    "    return locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def POS_adj(query):\n",
+    "    nlp = spacy.load(\"fr_core_news_lg\")\n",
+    "    doc = nlp(query)\n",
+    "    adjs = [token.text for token in doc if token.pos_ == 'ADJ']\n",
+    "    return adjs   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stem(word):\n",
+    "    word_ = \"\".join(list(word)[-4:])\n",
+    "    return word[:-4]+re.sub(r'iens|ains|ards|ain|ien|ard|ois|oi|ens|en|ais|ai|ins|in|s$', '',word_, count = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_location_from_adj(c, communes):   \n",
+    "    c_ = stem(c)\n",
+    "    dist = []\n",
+    "    for a in communes :\n",
+    "        limit = min(int(2*len(c)/3), len(a))\n",
+    "        a1 =  \"\".join(list(a)[:limit])\n",
+    "        c1 =  \"\".join(list(c)[:limit])\n",
+    "        d1 = nltk.edit_distance(c1, a1)\n",
+    "        d2 = nltk.edit_distance(c_, a)\n",
+    "        dist.append([d1, d2])    \n",
+    "    \n",
+    "    dist = np.array(dist)\n",
+    "    avg = 0.5*dist[:, 0] + 0.5*dist[:, 1]\n",
+    "    sorted_ = np.argsort(avg)\n",
+    "    \n",
+    "    commune_ = communes[sorted_[0]]\n",
+    "    return commune_   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_geolocation(ip_adress):\n",
+    "    response = DbIpCity.get(ip_address, api_key='free')\n",
+    "    return response.city"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Heideltime\n",
+    "def get_time(query):\n",
+    "\n",
+    "    heideltime_parser = Heideltime()\n",
+    "    heideltime_parser.set_document_type('NEWS')\n",
+    "    heideltime_parser.set_language('FRENCH')\n",
+    "    result = heideltime_parser.parse(query)\n",
+    "    regex = \"<TIMEX3 tid=\\\".*?\\\" type=\\\"(.*?)\\\" value=\\\"(.*?)\\\">(.*?)</TIMEX3>\"\n",
+    "    return re.findall(regex, result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['03635X0545/PZ1', '03635X0545/PZ1']"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_bss(\"Quel était le niveau de la nappe phréatique à la station piézométrique 03635X0545/PZ1 le 12 janvier 2019 ?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -96,19 +267,19 @@
        "'45234'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c = get_insee(\"Orléans\")\n",
-    "c"
+    "c = get_insee(\"Orleans\")\n",
+    "c[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -127,19 +298,19 @@
        " '03982X1045/F']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bss  = get_bss(c)\n",
+    "bss  = insee_to_bss(c[0])\n",
     "bss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -429,7 +600,7 @@
        "   'profondeur_nappe': 4.68}]}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,39 +612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "id": "C9qGKKe2RWT-"
-   },
-   "outputs": [],
-   "source": [
-    "import predict_flair\n",
-    "from flair.models import SequenceTagger\n",
-    "import fr_core_news_lg as fr\n",
-    "\n",
-    "def get_locations(query):\n",
-    "    \n",
-    "    batch_size = 4\n",
-    "    MODEL_PATH = \"/home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\"\n",
-    "    tag_type = \"label\"\n",
-    "    model = SequenceTagger.load(MODEL_PATH)\n",
-    "    \n",
-    "    snippets = [[1, query]]\n",
-    "    result = predict_flair.get_entities(snippets, model, tag_type, batch_size)[\"snippets\"][0][1]\n",
-    "    locations = [entity[\"text\"] for entity in result[\"entities\"] if entity[\"type\"] == \"LOC\"]\n",
-    "    return locations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-19 17:08:51,703 loading file /home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\n"
+      "2021-06-26 21:04:17,493 loading file /home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\n"
      ]
     },
     {
@@ -482,7 +628,7 @@
        "['Orléans']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,15 +640,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-19 16:02:38,532 loading file /home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\n",
-      "à quel profondeur se trouve le nappe à le adresse 12 rue de Coulmiers , 45000 Orléans\n"
+      "2021-06-26 21:04:22,878 loading file /home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\n"
      ]
     },
     {
@@ -511,7 +656,7 @@
        "['Coulmiers', 'Orléans']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,15 +668,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-19 16:02:44,217 loading file /home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\n",
-      "Y' avoir -t il de le eau dans le sous-sol parisien\n"
+      "2021-06-27 21:04:29,569 loading file /home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\n"
      ]
     },
     {
@@ -540,121 +684,150 @@
        "[]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "locations = get_locations(\"Y'a-t-il de l'eau dans le sous-sol parisien\")\n",
+    "locations = get_locations(\"Y'a-t-il de l'eau dans le sous-sol lyonnais\")\n",
     "locations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 288,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-06-19 17:10:56,099 loading file /home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['Loury', 'Loiret']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "locations = get_locations(\"J'habite à Loury dans le Loiret, à quelle profondeur faut-il que je creuse un puits dans mon jardin pour avoir de l'eau \")\n",
-    "locations"
+    "communes = pd.read_csv(\"Data/communes_names_distinct_.csv\", header = None).to_numpy().reshape(-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['parisian.n.01', 'parisian.a.01']"
+       "'orleans'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from nltk.corpus import wordnet as wn\n",
-    "x = [synset.name() for synset in wn.synsets('Parisian')]\n",
-    "x"
+    "z = get_location_from_adj(\"orleannais\", communes)\n",
+    "z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package omw to /home/maya/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/omw.zip.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "True"
+       "['lyon', 'paris']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import nltk\n",
-    "nltk.download('omw')"
+    "adjs = POS_adj(\"Y'a-t-il de l'eau dans le sous-sol lyonnais et parisien\")\n",
+    "locs = [get_location_from_adj(adj, communes) for adj in adjs]\n",
+    "locs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<?xml version=\"1.0\"?>\n",
-      "<!DOCTYPE TimeML SYSTEM \"TimeML.dtd\">\n",
-      "<TimeML>\n",
-      "Quel est le niveau de la nappe phréatique à Orléans <TIMEX3 tid=\"t1\" type=\"DATE\" value=\"2021-06-17\">hier</TIMEX3> et <TIMEX3 tid=\"t2\" type=\"DATE\" value=\"2021-06-18\">aujourd'hui</TIMEX3>?\n",
-      "</TimeML>\n",
-      "\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Paris'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from python_heideltime import Heideltime\n",
-    "\n",
-    "heideltime_parser = Heideltime()\n",
-    "heideltime_parser.set_document_type('NEWS')\n",
-    "heideltime_parser.set_language('FRENCH')\n",
-    "print(heideltime_parser.parse(\"Quel est le niveau de la nappe phréatique à Orléans hier et aujourd'hui?\"))"
+    "with urllib.request.urlopen(\"https://geolocation-db.com/json\") as url:\n",
+    "    data = json.loads(url.read().decode())\n",
+    "    ip_address = data[\"IPv4\"]\n",
+    "    \n",
+    "get_geolocation(ip_address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('DATE', '2021-06-26', 'hier'), ('DATE', '2021-06-27', \"aujourd'hui\")]"
+      ]
+     },
+     "execution_count": 352,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_time(\"Quel est le niveau de la nappe phréatique à Orléans hier et aujourd'hui?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('DATE', 'PRESENT_REF', 'maintenant')]"
+      ]
+     },
+     "execution_count": 354,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_time(\"A quelle hauteur se trouve l'eau souterraine sur la commune d'Orléans maintenant\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('DATE', '2021-W25', 'cette semaine')]"
+      ]
+     },
+     "execution_count": 355,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_time(\"A quelle hauteur se trouve l'eau souterraine sur la commune d'Orléans cette semaine\")"
    ]
   },
   {
