--- a/inria/Code/NER_flair.ipynb
+++ b/inria/Code/NER_flair.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {
     "id": "sKPy_1S8e8gY"
    },
@@ -32,33 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# communes = pd.read_csv(\"Data/scrapped/g3.csv\", header=None).to_numpy().reshape(-1)\n",
-    "# res = []\n",
-    "# for comm in communes:\n",
-    "#     comm_=re.sub(\"['-]\", \" \",comm)\n",
-    "#     res.append(unicodedata.normalize('NFD', comm_.lower()).encode('ascii', 'ignore').decode(\"utf-8\"))\n",
-    "# pd.DataFrame(res).to_csv(\"Data/scrapped/g3_.csv\", index=None, header=None)\n",
-    "\n",
-    "#Computing the embedings for the communes\n",
-    "# vectors = {}\n",
-    "# for comm in communes:\n",
-    "#     words = comm.split(\" \")\n",
-    "#     vect = np.zeros(300)\n",
-    "#     for word in words:\n",
-    "#         emb = ft.get_word_vector(word)\n",
-    "#         vect = vect + emb\n",
-    "#     print(vect)\n",
-    "#     vect = vect/len(words)\n",
-    "#     vectors[comm] = vect "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 299,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_bss(query): \n",
+    "    \"\"\"\n",
+    "     Extract BSS code from query\n",
+    "    \"\"\"\n",
     "    # AAAABCDDDD/designation\n",
     "    regex = \"[0-9]{5}[a-zA-Z][0-9]{4}/[a-zA-Z0-9]+\"\n",
     "    match = re.findall(regex, query)\n",
@@ -103,6 +80,9 @@
    "outputs": [],
    "source": [
     "def insee_to_bss(code_commune):\n",
+    "    \"\"\"\n",
+    "    Returns the BSS codes corresponding to the INSEE code\n",
+    "    \"\"\"\n",
     "    url =  \"https://hubeau.eaufrance.fr/api/v1/niveaux_nappes/stations?code_commune={c}&format=json&size=20\".format(c=code_commune)\n",
     "    exists = json.loads(requests.get(url).text)[\"count\"]\n",
     "    if exists>0 :\n",
@@ -124,6 +104,9 @@
    "outputs": [],
    "source": [
     "def get_station_piezo(station, start_date=None, end_date=None):\n",
+    "    \"\"\"\n",
+    "    Returns mesures corresponding to the station BSS code\n",
+    "    \"\"\"\n",
     "    url = \"https://hubeau.eaufrance.fr/api/v1/niveaux_nappes/chroniques?code_bss={bss}&date_debut_mesure={d1}&date_fin_mesure={d2}&size=1\".format(bss=station, d1=start_date, d2=end_date)\n",
     "    number = json.loads(requests.get(url).text)[\"count\"]\n",
     "    if number > 0:\n",
@@ -133,32 +116,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {
     "id": "C9qGKKe2RWT-"
    },
    "outputs": [],
    "source": [
     "def get_locations(query):\n",
+    "    \"\"\"\n",
+    "    Use NER to extract locations from query\n",
+    "    \"\"\"\n",
     "    \n",
     "    batch_size = 4\n",
-    "    MODEL_PATH = \"/home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\"\n",
+    "    MODEL_PATH = \"NER_tool/stacked-standard-flair-150-wikiner.pt\"\n",
     "    tag_type = \"label\"\n",
     "    model = SequenceTagger.load(MODEL_PATH)\n",
     "    \n",
     "    snippets = [[1, query]]\n",
     "    result = predict_flair.get_entities(snippets, model, tag_type, batch_size)[\"snippets\"][0][1]\n",
-    "    locations = [entity[\"text\"] for entity in result[\"entities\"] if entity[\"type\"] == \"LOC\"]\n",
+    "    locations = [entity[\"text\"] for entity in result[\"entities\"] if \"LOC\" in str(entity[\"labels\"][0])]\n",
     "    return locations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def POS_adj(query):\n",
+    "    \"\"\"\n",
+    "    Returns words that are tagged ADJ in query\n",
+    "    \"\"\"\n",
     "    nlp = spacy.load(\"fr_core_news_lg\")\n",
     "    doc = nlp(query)\n",
     "    adjs = [token.text for token in doc if token.pos_ == 'ADJ']\n",
@@ -167,22 +156,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def stem(word):\n",
+    "    \"\"\" stemming \"\"\"\n",
     "    word_ = \"\".join(list(word)[-4:])\n",
     "    return word[:-4]+re.sub(r'iens|ains|ards|ain|ien|ard|ois|oi|ens|en|ais|ai|ins|in|s$', '',word_, count = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_location_from_adj(c, communes):   \n",
+    "    \"\"\"\n",
+    "    Returns the most similar commune to the adjective c from the list of communes\n",
+    "    \"\"\"\n",
     "    c_ = stem(c)\n",
     "    dist = []\n",
     "    for a in communes :\n",
@@ -203,44 +196,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_geolocation(ip_adress):\n",
+    "    \"\"\" \n",
+    "    Get location from ip adress\n",
+    "    \"\"\"\n",
     "    response = DbIpCity.get(ip_address, api_key='free')\n",
     "    return response.city"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Heideltime\n",
     "def get_time(query):\n",
+    "    \"\"\"\n",
+    "    Extract dates from query\n",
+    "    \"\"\"\n",
     "\n",
     "    heideltime_parser = Heideltime()\n",
     "    heideltime_parser.set_document_type('NEWS')\n",
     "    heideltime_parser.set_language('FRENCH')\n",
     "    result = heideltime_parser.parse(query)\n",
+    "    print(result)\n",
     "    regex = \"<TIMEX3 tid=\\\".*?\\\" type=\\\"(.*?)\\\" value=\\\"(.*?)\\\">(.*?)</TIMEX3>\"\n",
     "    return re.findall(regex, result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['03635X0545/PZ1', '03635X0545/PZ1']"
+       "['03635X0545/PZ1']"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -267,7 +267,7 @@
        "'45234'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -298,7 +298,7 @@
        " '03982X1045/F']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -600,7 +600,7 @@
        "   'profondeur_nappe': 4.68}]}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,42 +612,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-26 21:04:17,493 loading file /home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\n"
+      "2021-06-27 23:46:12,356 loading file NER_tool/stacked-standard-flair-150-wikiner.pt\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['Orléans']"
+       "['Orléans', 'Paris']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "locations = get_locations(\"Quel est le niveau de la nappe phréatique à Orléans aujourd'hui?\")\n",
+    "locations = get_locations(\"Quel est le niveau de la nappe phréatique à Orléans et Paris aujourd'hui?\")\n",
     "locations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-26 21:04:22,878 loading file /home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\n"
+      "2021-06-27 23:46:20,673 loading file NER_tool/stacked-standard-flair-150-wikiner.pt\n"
      ]
     },
     {
@@ -656,7 +656,7 @@
        "['Coulmiers', 'Orléans']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,14 +668,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-27 21:04:29,569 loading file /home/maya/Documents/hubeau/inria/Code/NER_tool/stacked-standard-flair-150-wikiner.pt\n"
+      "2021-06-27 23:46:25,318 loading file NER_tool/stacked-standard-flair-150-wikiner.pt\n"
      ]
     },
     {
@@ -684,7 +684,7 @@
        "[]"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "'orleans'"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "['lyon', 'paris']"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "'Paris'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "[('DATE', '2021-06-26', 'hier'), ('DATE', '2021-06-27', \"aujourd'hui\")]"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "[('DATE', 'PRESENT_REF', 'maintenant')]"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -821,13 +821,33 @@
        "[('DATE', '2021-W25', 'cette semaine')]"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "get_time(\"A quelle hauteur se trouve l'eau souterraine sur la commune d'Orléans cette semaine\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('DATE', '2021-06-16', '16 juin'), ('DATE', '2021-06-26', '26 juin')]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_time(\"A quelle hauteur se trouve l'eau souterraine sur la commune d'Orléans du 16 juin au 26 juin\")"
    ]
   },
   {
