--- a/inria/Code/demonyms/merging.ipynb
+++ b/inria/Code/demonyms/merging.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from nltk.stem.snowball import FrenchStemmer\n",
     "import unicodedata\n",
     "import re\n",
     "import math"
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,16 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "30156"
-      ]
+      "text/plain": "30156"
      },
-     "execution_count": 187,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,20 +77,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"Data/merged.json\", \"w\") as fp:\n",
-    "        json.dump(merged,fp)"
+    "# with open(\"Data/merged.json\", \"w\") as fp:\n",
+    "#         json.dump(merged,fp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
+   "outputs": [],
+   "source": [
+    "def stem_nltk(word):\n",
+    "    stemmer = FrenchStemmer()\n",
+    "    return stemmer.stem(word)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all = json.load(open(\"Data/merged.json\"))\n",
+    "reversed , reversed_stemmed = {}, {}\n",
+    "\n",
+    "for commune, demonyms in all.items():\n",
+    "    for demonym in demonyms:\n",
+    "        if demonym in reversed:\n",
+    "            reversed[demonym].add(commune)\n",
+    "        else:\n",
+    "            reversed[demonym] = set([commune])\n",
+    "\n",
+    "        stemmed = stem_nltk(demonym)\n",
+    "        if stemmed in reversed_stemmed:\n",
+    "            reversed_stemmed[stemmed].add(commune)\n",
+    "        else:\n",
+    "            reversed_stemmed[stemmed] = set([commune])\n",
+    "for k,v in reversed.items():\n",
+    "    reversed[k] = list(v)\n",
+    "for k,v in reversed_stemmed.items():\n",
+    "    reversed_stemmed[k] = list(v)\n",
+    "\n",
+    "with open(\"Data/merged_reversed.json\", \"w\") as fp:\n",
+    "         json.dump(reversed,fp)\n",
+    "with open(\"Data/merged_reversed_stemmed.json\", \"w\") as fp:\n",
+    "         json.dump(reversed_stemmed,fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [],
+   "source": [
+    "def get_location_demonym_dict(demonym, stemmed_dict):\n",
+    "    stemmed = stem_nltk(demonym)\n",
+    "    if stemmed in stemmed_dict:\n",
+    "        return stemmed_dict[stemmed]\n",
+    "    return -1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['beaulieu-les-fontaines', 'belfonds', 'bellefontaine', 'fontainebleau']"
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_location_demonym_dict(\"bellifontaines\", reversed_stemmed)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61689 39568\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(reversed), len(reversed_stemmed))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
