added start and end date to tables

--- a/inria/Code/demonyms/merging.ipynb
+++ b/inria/Code/demonyms/merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "30156"
      },
-     "execution_count": 56,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "def stem_nltk(word):\n",
@@ -103,13 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "all = json.load(open(\"Data/merged.json\"))\n",
-    "reversed , reversed_stemmed = {}, {}\n",
-    "\n",
+    "reversed , reversed_stemmed = {}, {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "for commune, demonyms in all.items():\n",
     "    for demonym in demonyms:\n",
     "        if demonym in reversed:\n",
@@ -131,11 +137,17 @@
     "         json.dump(reversed,fp)\n",
     "with open(\"Data/merged_reversed_stemmed.json\", \"w\") as fp:\n",
     "         json.dump(reversed_stemmed,fp)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "def get_location_demonym_dict(demonym, stemmed_dict):\n",
@@ -153,13 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "outputs": [
     {
      "data": {
       "text/plain": "['beaulieu-les-fontaines', 'belfonds', 'bellefontaine', 'fontainebleau']"
      },
-     "execution_count": 61,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "outputs": [
     {
      "name": "stdout",
@@ -188,6 +200,58 @@
    ],
    "source": [
     "print(len(reversed), len(reversed_stemmed))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [],
+   "source": [
+    "all = json.load(open(\"Data/departements_demonyms.json\"))\n",
+    "reversed_stemmed = {}\n",
+    "\n",
+    "for dep, demonyms in all.items():\n",
+    "    for demonym in demonyms:\n",
+    "        stemmed = stem_nltk(demonym)\n",
+    "        if stemmed in reversed_stemmed:\n",
+    "            reversed_stemmed[stemmed].add(dep.lower())\n",
+    "        else:\n",
+    "            reversed_stemmed[stemmed] = set([dep.lower()])\n",
+    "\n",
+    "for k,v in reversed_stemmed.items():\n",
+    "    reversed_stemmed[k] = list(v)\n",
+    "\n",
+    "with open(\"Data/deps_stemmed_reversed.json\", \"w\") as fp:\n",
+    "         json.dump(reversed_stemmed,fp)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['albins']"
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dbPedia[\"val de virvée\"]"
    ],
    "metadata": {
     "collapsed": false,
