--- a/inria/Code/demonyms/infobox_extraction.ipynb
+++ b/inria/Code/demonyms/infobox_extraction.ipynb
@@ -14388,6 +14388,51 @@
       "________________________________________________\n",
       "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q653340'}}]}}\n",
       "Saint-Martin-des-Besaces ['Q653340']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1169920'}}]}}\n",
+      "Saint-Martin-des-Bois ['Q1169920']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q267970'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q475514'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q581232'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q965691'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1373473'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1624548'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q83804640'}}]}}\n",
+      "Saint-Martin-des-Champs ['Q1373473', 'Q83804640', 'Q1624548', 'Q581232', 'Q965691', 'Q267970', 'Q475514']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1077378'}}]}}\n",
+      "Saint-Martin-des-Combes ['Q1077378']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q872913'}}]}}\n",
+      "Saint-Martin-des-Entrées ['Q872913']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q919546'}}]}}\n",
+      "Saint-Martin-des-Fontaines ['Q919546']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q338560'}}]}}\n",
+      "Saint-Martin-des-Lais ['Q338560']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q250696'}}]}}\n",
+      "Saint-Martin-des-Landes ['Q250696']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q532491'}}]}}\n",
+      "Saint-Martin-des-Monts ['Q532491']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1420710'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q60882261'}}]}}\n",
+      "Saint-Martin-des-Noyers ['Q60882261', 'Q1420710']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q242383'}}]}}\n",
+      "Saint-Martin-des-Olmes ['Q242383']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q736628'}}]}}\n",
+      "Saint-Martin-des-Plains ['Q736628']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q589319'}}]}}\n",
+      "Saint-Martin-des-Prés ['Q589319']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q732639'}}]}}\n",
+      "Saint-Martin-des-Puits ['Q732639']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1441722'}}]}}\n",
+      "Saint-Martin-des-Pézerits ['Q1441722']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1412974'}}]}}\n",
+      "Saint-Martin-des-Tilleuls ['Q1412974']\n",
       "________________________________________________\n"
      ]
     }
