--- a/inria/Code/demonyms/infobox_extraction.ipynb
+++ b/inria/Code/demonyms/infobox_extraction.ipynb
@@ -14433,6 +14433,45 @@
       "________________________________________________\n",
       "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1412974'}}]}}\n",
       "Saint-Martin-des-Tilleuls ['Q1412974']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q932015'}}]}}\n",
+      "Saint-Martin-du-Bec ['Q932015']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q717387'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1383062'}}]}}\n",
+      "Saint-Martin-du-Bois ['Q1383062', 'Q717387']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q264600'}}]}}\n",
+      "Saint-Martin-du-Boschet ['Q264600']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q749866'}}]}}\n",
+      "Saint-Martin-du-Clocher ['Q749866']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q577466'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1344576'}}]}}\n",
+      "Saint-Martin-du-Fouilloux ['Q577466', 'Q1344576']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q275313'}}]}}\n",
+      "Saint-Martin-du-Frêne ['Q275313']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1626244'}}]}}\n",
+      "Saint-Martin-du-Lac ['Q1626244']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1101773'}}]}}\n",
+      "Saint-Martin-du-Limet ['Q1101773']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1166096'}}]}}\n",
+      "Saint-Martin-du-Manoir ['Q1166096']\n",
+      "________________________________________________\n",
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q872844'}}]}}\n",
+      "Saint-Martin-du-Mesnil-Oury ['Q872844']\n",
+      "________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'head': {'vars': ['ville']}, 'results': {'bindings': [{'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q89806'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q864455'}}, {'ville': {'type': 'uri', 'value': 'http://www.wikidata.org/entity/Q1626063'}}]}}\n",
+      "Saint-Martin-du-Mont ['Q864455', 'Q1626063', 'Q89806']\n",
       "________________________________________________\n"
      ]
     }
