--- a/inria/Code/demonyms/Untitled1.ipynb
+++ b/inria/Code/demonyms/Untitled1.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import json"
    ]
   },
   {
@@ -52,6 +53,44 @@
    ],
    "source": [
     "solution ([10, 20, 30])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wikidata_ids = json.load(open(\"Data/wikidata_ids_(1-16).json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = np.array(list(wikidata_ids.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([20136]),)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(l==\"Montgey\")"
    ]
   },
   {
