added region demonyms

--- a/inria/Code/demonyms/merging.ipynb
+++ b/inria/Code/demonyms/merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -557,22 +557,22 @@
    },
    "outputs": [],
    "source": [
-    "all = json.load(open(\"Data/departements_demonyms.json\"))\n",
-    "# reversed_stemmed = {}\n",
+    "all = json.load(open(\"Data/regions_demonyms.json\"))\n",
+    "reversed_stemmed = {}\n",
     "\n",
-    "# for dep, demonyms in all.items():\n",
-    "#     for demonym in demonyms:\n",
-    "#         stemmed = stem_nltk(demonym)\n",
-    "#         if stemmed in reversed_stemmed:\n",
-    "#             reversed_stemmed[stemmed].add(dep.lower())\n",
-    "#         else:\n",
-    "#             reversed_stemmed[stemmed] = set([dep.lower()])\n",
+    "for dep, demonyms in all.items():\n",
+    "    for demonym in demonyms:\n",
+    "        stemmed = stem_nltk(demonym)\n",
+    "        if stemmed in reversed_stemmed:\n",
+    "            reversed_stemmed[stemmed].add(dep.lower())\n",
+    "        else:\n",
+    "            reversed_stemmed[stemmed] = set([dep.lower()])\n",
     "\n",
-    "# for k,v in reversed_stemmed.items():\n",
-    "#     reversed_stemmed[k] = list(v)\n",
+    "for k,v in reversed_stemmed.items():\n",
+    "    reversed_stemmed[k] = list(v)\n",
     "\n",
-    "# with open(\"Data/deps_stemmed_reversed.json\", \"w\") as fp:\n",
-    "#          json.dump(reversed_stemmed,fp)\n"
+    "with open(\"Data/regs_stemmed_reversed.json\", \"w\") as fp:\n",
+    "         json.dump(reversed_stemmed,fp)\n"
    ]
   },
   {
